# ClaudeBridge

./: .gitignore  Dockerfile  README.md  pyproject.toml  tailwind.config.js
.github/workflows/: release.yml
claudebridge/services/ui/: layout.py
styles/: input.css
